--- a/.config
+++ b/.config
@@ -5021,10 +5021,11 @@ CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
 # CONFIG_PACKAGE_mt7602 is not set
 # CONFIG_PACKAGE_mt7603 is not set
 # CONFIG_PACKAGE_mt7610 is not set
-# CONFIG_PACKAGE_mt7612 is not set
+CONFIG_PACKAGE_mt7612=y
 # CONFIG_PACKAGE_mt7615 is not set
-CONFIG_PACKAGE_mt7620=y
+# CONFIG_PACKAGE_mt7620 is not set
 # CONFIG_PACKAGE_mt7628 is not set
+CONFIG_PACKAGE_mt76x2=y
 # end of Drivers
 
 #
